omw to merge; navbar jadi; overflow-x in mobile fixed

--- a/public/assets/scss/app.css
+++ b/public/assets/scss/app.css
@@ -6,6 +6,7 @@
   transition: all ease 0.2s;
   color: #001219;
   font-family: "Inter", sans-serif;
+  scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar {
@@ -103,7 +104,7 @@ h4,
 h5,
 .h5 {
   font-style: normal;
-  font-weight: 300;
+  font-weight: 500;
   font-size: 0.875rem;
   line-height: 1rem;
   letter-spacing: -0.03rem;
@@ -275,14 +276,14 @@ label {
   right: 0;
   transform: translateY(-50%);
   cursor: pointer;
-  background-image: url(/images/see.svg?7cc1c59bbae77854abfa83a016c3bdf7);
+  background-image: url(/images/see.svg?f196ee479a2c167cccfcf4424b486f18);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
   transition: background-image 0.5s ease;
 }
 .form-group__see-password.unsee {
-  background-image: url(/images/unsee.svg?f46ac4b509b9917ec3348bf102c78421);
+  background-image: url(/images/unsee.svg?be6a9afb096d875d394992b24d0954b8);
 }
 .form-group__selected {
   font-size: 1.125rem;
@@ -306,7 +307,7 @@ label {
   top: 50%;
   transform: translateY(-50%);
   border: none;
-  background-image: url(/images/dropdown-arrow.svg?662fe868c0cf0ed973372d0fb759b272);
+  background-image: url(/images/dropdown-arrow.svg?512ef9cca648640097afb8e35273d5d4);
   background-repeat: no-repeat;
   background-size: cover;
   transition: transform 0.3s ease-in-out 0s;
@@ -900,6 +901,60 @@ button.btn-secondary:focus, button.btn-secondary:focus-within, button.btn-second
 .nav__burger.active .line:nth-child(2) {
   transform: translateY(-0.4rem) rotate(-45deg);
 }
+.nav__mobile-item {
+  width: 100%;
+  height: calc(100vh - 5rem);
+  padding: 0;
+  position: fixed;
+  top: 5rem;
+  left: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  gap: 0;
+  z-index: -1;
+  transform: translateX(100%);
+  transition: transform 0.5s ease-in-out;
+  background-color: #FFFFFF;
+}
+.nav__mobile-item .content {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 4px;
+}
+.nav__mobile-item .content hr {
+  width: 200px;
+  height: 2px;
+  margin: 40px 0;
+  border: none;
+  border-radius: 2px;
+  background-color: rgba(0, 18, 25, 0.15);
+}
+.nav__mobile-item .nav__item {
+  height: auto;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  align-items: flex-start;
+}
+.nav__mobile-item .nav__item h2 {
+  color: #B3B8BA;
+}
+.nav__mobile-item .nav__item--masuk h2 {
+  color: #001219;
+}
+.nav__mobile-item .nav__item--registrasi h2, .nav__mobile-item .nav__item--logout h2 {
+  color: #BB3E03;
+}
+.nav__mobile-item .nav__item.active h2 {
+  color: #001219;
+}
+.nav__mobile-item.active {
+  transform: translateX(0);
+}
 .nav__group {
   height: inherit;
   margin: 0 auto;
@@ -926,6 +981,7 @@ button.btn-secondary:focus, button.btn-secondary:focus-within, button.btn-second
   text-align: center;
   text-decoration: none;
   white-space: nowrap;
+  height: inherit;
   position: relative;
   display: flex;
   justify-content: center;
@@ -939,8 +995,22 @@ button.btn-secondary:focus, button.btn-secondary:focus-within, button.btn-second
   right: 0;
   height: 4px;
 }
+.nav__item--masuk {
+  color: #BB3E03;
+}
+.nav__item.button {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
 .nav__item.active span {
   background-color: #001219;
+}
+.nav__right {
+  height: inherit;
+  display: flex;
+  align-items: center;
+  gap: 3rem;
 }
 .nav__profile {
   cursor: pointer;
@@ -983,34 +1053,28 @@ button.btn-secondary:focus, button.btn-secondary:focus-within, button.btn-second
   background-color: #E9D8A6;
 }
 
+@media screen and (max-width: 1199.9px) {
+  .nav__group.guest {
+    display: none;
+  }
+  .nav__mobile.guest {
+    display: flex;
+  }
+}
+@media screen and (max-width: 991.9px) {
+  .nav__group.admin {
+    display: none;
+  }
+  .nav__mobile.admin {
+    display: flex;
+  }
+}
 @media screen and (max-width: 767.9px) {
-  .nav__brand {
-    width: 1.5rem;
+  .nav__group {
+    display: none;
   }
   .nav__mobile {
     display: flex;
-  }
-  .nav__group {
-    width: 100%;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
-    padding: 0;
-    position: absolute;
-    top: 100%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: stretch;
-    gap: 0;
-    z-index: -1;
-    transform: translateY(-120%);
-    transition: transform 0.5s ease-in-out;
-  }
-  .nav__group img {
-    display: none;
-  }
-  .nav__group.active {
-    transform: translateY(0);
   }
   .nav__right-btn {
     flex-direction: column;
@@ -1025,26 +1089,11 @@ button.btn-secondary:focus, button.btn-secondary:focus-within, button.btn-second
     flex-direction: column;
     gap: 0;
   }
-  .nav__dropdown {
-    position: relative;
-    align-items: center;
-    opacity: 1;
-    transform: none;
-    border: none;
-    visibility: visible;
+  .nav__profile {
+    color: #667175;
   }
-  .nav__item {
-    padding: 1.7rem 0;
-    background-color: #FFFFFF;
-  }
-  .nav__item.logout {
-    color: #BB3E03;
-  }
-  .nav__item.active {
-    background-color: #E9D8A6;
-  }
-  .nav__item span {
-    display: none;
+  .nav__profile span {
+    color: #001219;
   }
 }
 .comingsoon {
@@ -1384,7 +1433,7 @@ button.btn-secondary:focus, button.btn-secondary:focus-within, button.btn-second
     position: absolute;
     bottom: 2rem;
     right: 2rem;
-    background-image: url(/images/arrow-next.svg?165325e903f5ef48b77cf4d8e1891f37);
+    background-image: url(/images/arrow-next.svg?b9a1f393ea1e6e14abf477862ab4e95d);
     background-size: contain;
     background-repeat: no-repeat;
   }
@@ -2204,6 +2253,7 @@ button.btn-secondary:focus, button.btn-secondary:focus-within, button.btn-second
 
 .about {
   min-height: calc(100vh - 6rem);
+  scroll-margin-top: 6rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -2230,6 +2280,7 @@ button.btn-secondary:focus, button.btn-secondary:focus-within, button.btn-second
 
 .highlighted-agenda {
   min-height: calc(100vh - 6rem);
+  scroll-margin-top: 6rem;
   padding: 2rem 0;
   display: flex;
   flex-direction: column;
@@ -2282,6 +2333,7 @@ button.btn-secondary:focus, button.btn-secondary:focus-within, button.btn-second
 
 .guideline {
   min-height: calc(100vh - 6rem);
+  scroll-margin-top: 6rem;
   padding: 2rem 0;
   position: relative;
   display: flex;
@@ -2325,6 +2377,7 @@ button.btn-secondary:focus, button.btn-secondary:focus-within, button.btn-second
 
 .timeline {
   min-height: calc(100vh - 6rem);
+  scroll-margin-top: 6rem;
   margin-bottom: 2rem;
   display: flex;
   flex-direction: column;
@@ -2411,6 +2464,7 @@ button.btn-secondary:focus, button.btn-secondary:focus-within, button.btn-second
 
 .video {
   min-height: calc(100vh - 6rem);
+  scroll-margin-top: 6rem;
   display: flex;
   flex-direction: column;
   align-items: center;
