--- a/resources/sass/env.scss
+++ b/resources/sass/env.scss
@@ -8,6 +8,7 @@
     transition: all ease .2s;
     color: $rich-black;
     font-family: $inter;
+    scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar {
@@ -100,7 +101,7 @@ h4,
 h5,
 .h5 {
     font-style: normal;
-    font-weight: 300;
+    font-weight: 500;
     font-size: .875rem;
     line-height: 1rem;
     letter-spacing: -0.03rem;
